# pcltests

./: .gitignore  README.md  multipleKinectCalibrationSteps.txt
ICP/: CMakeLists.txt
ISS3D_keypoints/: CMakeLists.txt  CMakeLists.txt~  container.pcd  container2_descriptors.pcd  container2_keypoints.pcd  container_descriptors.pcd  container_keypoints.pcd  keypoints.cpp  matching.cpp  scene_descriptors.pcd  scene_keypoints.pcd  scene_keypoints_descriptors.pcd  scene_keypoints_keypoints.pcd
LCCP/: CMakeLists.txt  bmw_clutter_remaining.pcd  lccp.cpp  mean_lccp.cpp
alignment_prerejective/: alignment_prerejective.cpp  container2.pcd
bilateral_upsampling/: CMakeLists.txt  bilateral.cpp
customAlignment/: CMakeLists.txt  Notes.txt  SpectralClustering.m  bmw_clutter_remaining.pcd  bmw_container_segmented.pcd  clustering.m  customAlignment.cpp  customAlignment_backup.cpp  customAlignment_coarse.pcd  customAlignment_fine.pcd  customAlignment_scene.pcd  customSegmentation.cpp  demo.cpp  segmentationAbdeslam.cpp  segmentationAlexandrov.cpp  toSegment.pcd  wholeLoop.cpp  wholeLoop_workingExample.cpp
euclidean_clustering/: CMakeCache.txt  CMakeLists.txt  Makefile  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cluster_extraction  cluster_extraction.cpp  cluster_extraction.cpp~  cmake_install.cmake  conditional_euclidean.cpp  container.pcd  segmented_container.pcd
hull_polygon/: concave_hull_2d.cpp  concave_hull_2d.cpp~  scene_hull.pcd
multipleKinects/: CMakeLists.txt  containerAlignment.cpp  multipleKinectCalibrationSteps.txt  multipleKinects.cpp  sceneAlignment.cpp
multipleKinects/results/: error_container_alignment.txt  error_scene_alignment.txt
normalDistribution/: CMakeLists.txt  container_model.pcd  normalDistribution.cpp
pairwise/: pairwise_incremental_registration.cpp
region_growing/: CMakeLists.txt  region_growing_segmentation.cpp  region_growing_segmentation.cpp~
region_growing_color/: CMakeLists.txt  region_growing_rgb_segmentation.cpp  region_growing_rgb_segmentation.cpp~
scans/: container_model_rgb.pcd
scene_reconstruction/: CMakeLists.txt  clouds.txt  customAlignment_coarse.pcd  customAlignment_fine.pcd  customAlignment_scene.pcd  merged.pcd  reconstruction.cpp
scene_reconstruction/scans/: bin1.pcd  bin2.pcd  bin3.pcd  bin4.pcd
template_alignment/: CMakeCache.txt  Makefile  cmake_install.cmake  object_templates.txt  object_templates.txt~  output.pcd  output2.pcd  template_alignment  template_alignment.cpp  template_alignment.cpp~  timeExperiments.txt
template_alignment/data/: object_template_0.pcd~
unused_code_samples/: filters.txt  moving_least_squares.txt  narf_keypoints.txt
